--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,10 +1,11 @@
+@import "./Vars.scss";
+@import "./Media.scss";
+
 body {
-    margin: 0;
-    font-family: 'Muli', sans-serif;
-    background: #8f57fd;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
+  background: $main-color;
+  font-family: $theme-font;
+}
+
+* {
+  box-sizing: border-box;
+}
